CHANGES IN VERSION 1.12
-----------------------

NEW FEATURES

    o Parse Broad gene set sub-categories

CHANGES IN VERSION 1.5
----------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Constructors for classes EntrezIdentifier, EnzymeIdentifier,
    GenenameIdentifier, RefseqIdentifier, SymbolIdentifier,
    UnigeneIdentifier can now accept an 'annotation' argument. This is
    used to indicate which annotation package the identifiers are
    from, e.g., EntrezIdentifier("hgu95av2.db") indicates that the
    EntrezId's are from the hgu95av2.db package.

    o GOCollection now tracks ontology as well as evidenceCode.

    o Add ComputedCollection class to describe gene set collections
    resulting from computations.

    o Additional GeneSetCollection constructors

    o Add OBOCollection class for reading OBO gene sets, including
    functions to retrieve OBO collections from the internet
    (getOBOCollectoin) and convert OBOCollections to and from graphNEL
    objects.

    o GeneSets constructed from GOCollections require a geneIdType
    with an appropriate (i.e., GO to identifier) mapping, e.g.,
    geneIdType=EntrezIdentifier("org.Hs.eg.db")

NEW FEATURES

    o geneIdType<- and mapIdentifiers can now map between any two
    identifier types within an annotation package, e.g.,
    SymbolIdentifer('org.Hs.eg.db') to
    GenenameIdentifier('org.Hs.eg.db')

    o Parse revised Broad gene sets.

    o More extensive information in some 'show' methods

    o Added a mapIdentifiers method to allow maps with user-supplied
    AnnDbBimap objects

BUG FIXES

    o GO evidenceCodes updated to current codes available as defined
    in GO
    
    o GeneSetCollection,ExpressionSet,(Pfam|Prosite|Chrloc)Collection-method
    now correctly navigate the underlying annotations and create gene
    set collections

    o A GeneSetCollection constructed with a named list could
    incorrectly propagate the set names.

    o Export MapCollection class
